# Sapfor2

./: .gitignore  Makefile  README.md
sapfor/experts/Sapfor_2017/: CMakeLists.txt  Sapfor.sln  paths.default.txt  rebuild.sh  test_volodkins_code.py
sapfor/experts/Sapfor_2017/Inliner/: CMakeLists.txt  Inliner.vcxproj  Inliner.vcxproj.filters  rebuild.sh
sapfor/experts/Sapfor_2017/Parser/: CMakeLists.txt  Parser.vcxproj  Parser.vcxproj.filters  rebuild.sh
sapfor/experts/Sapfor_2017/SageLib/: CMakeLists.txt  SageLib.vcxproj  SageLib.vcxproj.filters
sapfor/experts/Sapfor_2017/SageNewSrc/: CMakeLists.txt  SageNewSrc.vcxproj  SageNewSrc.vcxproj.filters
sapfor/experts/Sapfor_2017/SageOldSrc/: CMakeLists.txt  SageOldSrc.vcxproj  SageOldSrc.vcxproj.filters
sapfor/experts/Sapfor_2017/Sapc++/: Sapc++.sln
sapfor/experts/Sapfor_2017/Sapc++/Sapc++/: Sapc++.vcxproj  Sapc++.vcxproj.filters
sapfor/experts/Sapfor_2017/Sapfor/: Makefile  Sapfor.vcxproj  Sapfor.vcxproj.filters  dvm.proj  prog.for.dep
sapfor/experts/Sapfor_2017/TransformCommonLib/: CMakeLists.txt  TransformCommonLib.vcxproj  TransformCommonLib.vcxproj.filters
sapfor/experts/Sapfor_2017/TransformLib/: CMakeLists.txt  TransformLib.vcxproj  TransformLib.vcxproj.filters
sapfor/experts/Sapfor_2017/TransformUtils/: CMakeLists.txt  TransformUtils.vcxproj  TransformUtils.vcxproj.filters
sapfor/experts/Sapfor_2017/_src/: AstWrapper.h  PassManager.h  Sapfor.cpp  Sapfor.h  SapforData.h  SgUtils.cpp  SgUtils.h  directive_parser.cpp  directive_parser.h  errors.h  transform.h  transforms.cpp  types.h  utils.cpp  utils.h  version.h
sapfor/experts/Sapfor_2017/_src/CFGraph/: CFG_BasicBlock.cpp  CFG_BasicBlock.h  CFG_Common.cpp  CFG_Common.h  CFG_Variables.cpp  CFG_Variables.h  CFGraph.cpp  CFGraph.h
sapfor/experts/Sapfor_2017/_src/CreateInterTree/: CreateInterTree.cpp  CreateInterTree.h  Readme.md
sapfor/experts/Sapfor_2017/_src/DEAR/: anl.h  database.cpp  dep_analyzer.h  dep_analyzer_Kataev.cpp  dep_test.h  help.cpp  sqlite.h  vrd_db.c  vrd_db.h
sapfor/experts/Sapfor_2017/_src/DirectiveAnalyzer/: DirectiveAnalyzer.cpp  DirectiveAnalyzer.h
sapfor/experts/Sapfor_2017/_src/Distribution/: Array.cpp  Array.h  Arrays.h  CreateDistributionDirs.cpp  CreateDistributionDirs.h  Cycle.cpp  Cycle.h  Distribution.cpp  Distribution.h  DvmhDirective.cpp  DvmhDirective.h  DvmhDirectiveBase.cpp  DvmhDirectiveBase.h  DvmhDirective_func.h  GraphCSR.cpp  GraphCSR.h
sapfor/experts/Sapfor_2017/_src/DvmhRegions/: DvmhRegion.cpp  DvmhRegion.h  DvmhRegionInserter.cpp  DvmhRegionInserter.h  DvmhRegionInsertor.cpp  DvmhRegionInsertor.h  Exceptions.h  LoopChecker.cpp  LoopChecker.h  ReadWriteAnalyzer.cpp  ReadWriteAnalyzer.h  ReadWriteAnylyser.cpp  ReadWriteAnylyser.h  RegionsMerger.cpp  RegionsMerger.h  TypedSymbol.cpp  TypedSymbol.h  VarUsages.cpp  VarUsages.h
sapfor/experts/Sapfor_2017/_src/DynamicAnalysis/: createParallelRegions.cpp  createParallelRegions.h  fill_regions.cpp  fill_regions.h  gCov_parser.cpp  gCov_parser_func.h  gcov_info.cpp  gcov_info.h
sapfor/experts/Sapfor_2017/_src/ExpressionTransform/: control_flow_graph_part.cpp  expr_transform.cpp  expr_transform.h
sapfor/experts/Sapfor_2017/_src/GraphCall/: graph_calls.cpp  graph_calls.h  graph_calls_base.cpp  graph_calls_func.h
sapfor/experts/Sapfor_2017/_src/GraphLoop/: graph_loops.cpp  graph_loops.h  graph_loops_base.cpp  graph_loops_func.h
sapfor/experts/Sapfor_2017/_src/Inliner/: CopySubprogramBetweenFiles.cpp  inliner.h
sapfor/experts/Sapfor_2017/_src/LoopAnalyzer/: allocations_prepoc.cpp  dep_analyzer.cpp  directive_creator.cpp  directive_creator.h  directive_creator_base.cpp  directive_parser.cpp  directive_parser.h  insert_directive.cpp  loop_analyzer.cpp  loop_analyzer.h  remote_access.cpp  shadow.cpp  shadow.h  spf_directive_preproc.cpp
sapfor/experts/Sapfor_2017/_src/LoopConverter/: array_assign_to_loop.cpp  array_assign_to_loop.h  checkpoints.cpp  checkpoints.h  enddo_loop_converter.cpp  enddo_loop_converter.h  loop_transform.cpp  loop_transform.h  loops_combiner.cpp  loops_combiner.h  loops_splitter.cpp  loops_splitter.h  private_arrays_breeder.cpp  private_arrays_breeder.h  swap_array_dims.cpp  swap_array_dims.h  uniq_call_chain_dup.cpp  uniq_call_chain_dup.h
sapfor/experts/Sapfor_2017/_src/ParallelizationRegions/: ParRegions.cpp  ParRegions.h  ParRegions_func.h  expand_extract_reg.cpp  expand_extract_reg.h  extend_decrease_reg.cpp  extend_decrease_reg.h  resolve_par_reg_conflicts.cpp  resolve_par_reg_conflicts.h
sapfor/experts/Sapfor_2017/_src/Predictor/: PredictScheme.cpp  PredictScheme.h  PredictorInterface.h  PredictorModel.cpp  PredictorModel.h
sapfor/experts/Sapfor_2017/_src/PrivateAnalyzer/: private_analyzer.cpp  private_analyzer.h
sapfor/experts/Sapfor_2017/_src/SageAnalysisTool/: Makefile  README  annotationDriver.cpp  annotationDriver.h  arrayRef.cpp  arrayRef.h  computeInducVar.cpp  constanteProp.cpp  constanteSet.h  controlFlow.cpp  defUse.cpp  definesValues.h  definitionSet.h  depGraph.cpp  depGraph.h  depInterface.cpp  depInterface.h  depInterfaceExt.h  dependence.cpp  dependence.h  flowAnalysis.cpp  inducVar.h  intrinsic.cpp  intrinsic.h  invariant.cpp  loopTransform.cpp  reductionCode.h  set.cpp  set.h
sapfor/experts/Sapfor_2017/_src/Server/: checkUniq.cpp  server.cpp
sapfor/experts/Sapfor_2017/_src/Transformations/: array_assign_to_loop.cpp  checkpoints.cpp  checkpoints.h  function_purifying.cpp  function_purifying.h  loop_transform.cpp  loops_combiner.cpp  loops_splitter.h  private_arrays_breeder.cpp  uniq_call_chain_dup.cpp  uniq_call_chain_dup.h
sapfor/experts/Sapfor_2017/_src/Utils/: AstWrapper.h  BoostStackTrace.cpp  CommonBlock.h  DefUseList.h  PassManager.h  RationalNum.cpp  RationalNum.h  SgUtils.cpp  SgUtils.h  errors.h  leak_detector.h  russian_errors_text.txt  types.h  utils.cpp  utils.h  (+1 more)
sapfor/experts/Sapfor_2017/_test/: clean.sh  env.sh  jac.for  jacparam.h  test_final_version.f
sapfor/transformers/ftransform/trunk/: CMakeLists.txt  README.md  paths.default.txt  prepare_tests.sh  rebuild.sh  todolist.txt
(+686 files in other folders)
